                    - FilteredMapBrick.addresses_url
                    - NeighboursMapBrick.neighbours_url
                - Markers with custom icons are now supported in maps:
                    - New registry geomarker_icon_registry allows to register an icon for a model.
                    - New setting key 'geolocation-use_entity_icon_key' enables the feature.
        # Javascript:
            * Add RelativeURL() class as an alternative of URL() that do not accepts relative paths (e.g '/list?page=1' is not a valid URL)
            * FormDialog:
                - Form submit error responses with HTML can either replace the default overlay content or the frame content.
                - New creme.dialog.Frame option 'fillOnError'; if enabled the html error response replaces the content.
                - New creme.dialog.Dialog option 'fillFrameOnError'; if enabled the html error response replaces the content.
            * PopoverAction:
                - Now accept <script type="*/html"> or dom queries for the content for popovers : allows usage of links.
                - Factorise action creation in creme.dialog.PopoverAction.fromTarget()
            * Added _.pop() method that works like python dict.pop().

    Breaking changes :
    ------------------
        # Deprecated stuffs which have been removed :
            - In 'creme_core.gui' :
                - In 'field_printers', the function 'image_size()' & the constants MAX_HEIGHT/MAX_WIDTH has been removed.
                - In the class 'mass_import.FormRegistry' :
                    - The methods 'get()' & 'is_registered()' have been removed.
                    - The class 'UnregisteredCTypeException' has been removed.
            - In 'creme_core.models' :
                - In the methods 'HeaderFilter.can_view()' & 'creme_core.models.EntityFilter.can_view()',
                  the argument "content_type" has been removed.