@@ -1,6 +1,6 @@
 {% extends 'geolocation/bricks/base/detail-map.html' %}
 {% load i18n creme_bricks creme_perms %}
-{% load jsonify url from creme_core_tags %}
+{% load url from creme_core_tags %}
 
 {% block brick_extra_class %}{{block.super}} geolocation-google{% endblock %}
 
@@ -11,7 +11,6 @@
                  mapController: new creme.geolocation.GoogleMapController({
                      apiKey: '{{map_api_key}}'
                  }),
-                 addresses: {{geoaddresses|jsonify|safe}},
                  locationUrl: '{{update_address_url}}'
              });
          });
